--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 *.iml
 .gradle
+.idea
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-/.idea/
 /gradle.properties
 /gradlew
 /gradlew.bat
